Changelog
=========

3.3.0 (unreleased)
==================

- Added rg.prenotazioni.booking_review_states vocabulary
- Booking Subject field is now filled with the gate
- Added portal state view for prenotazioni
- Added an attribute on the week view to control who can access
  prenotazioni_search view
  (by default the user who can edit the prenotazioni folder)
- Use wildcars to identify holidays
- Get_day_intervals returns also the break as a slot
- Fix booking allowed during the lunch break
- Add a title with an indication of the booking time for anonymous booking links
  [ale-rt]

3.2.1 (2014-05-12)
==================

- Don't check for roles if user is anonymous
  [ale-rt]

3.2.0 (2014-05-12)
==================

- Since this version:
    * If a user can edit the Prenotazioni folder has the rights to manage the
      agenda
    * If a user has the "Reader" role has the rights to inspect Prenotazione
      objects
  [ale-rt]

3.1.1 (2014-05-12)
==================

- Method user_can_manage was called on view instead of week_view
  [ale-rt]


3.1.0 (2014-05-06)
==================

- Handle the reader role in prenotazioni_week_view.
  [ale-rt]


3.0.0 (2014-05-05)
==================

Features:

- Completely redesigned UI: now we have completely different experiences for
  backend and frontend users
- Support booking types with different duration
- Search view for Bookings inside a Booking Folder

Commits:

- Fix unicode issue in  upgrade_tipologia [alert]
- Fix redirect after exception message in prenotazioni_move [nicolasenno]
- Fix check conflicts on prenotazione_move [nicolasenno]
- Added legend to prenotazione_folder [nicolasenno]
- Fix redirect in prenotazioni_move [nicolasenno]
- Fix some i18n translations [nicolasenno]
- Added search pagination [nicolasenno]
- Added upgrade step for "tipologia" field in prenotazioni_folder [nicolasenno]
- Added upgrade step for "settimana_tipo" in prenotazioni_folder [nicolasenno]