@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>3000</version>
+  <version>3300</version>
   <dependencies>
     <dependency>profile-Products.DataGridField:default</dependency>
     <dependency>profile-collective.fontawesome:default</dependency>
